modules/terraform-rosa-networking/nat_gateway.tf
resource "aws_eip" "rosa_nat_gateway" {
  # checkov:skip=CKV2_AWS_19:EIP is correctly attached to NAT gateway (not EC2, but that's valid usage)
  count = local.create_networking ? local.public_subnet_count : 0

  tags = merge(var.tags,
    {
      "Name" = "${var.cluster_name}-natgw-${aws_subnet.rosa_public[count.index].availability_zone}"
    }
  )

  lifecycle {
    ignore_changes = [tags]
  }

  depends_on = [aws_internet_gateway.rosa]
}

resource "aws_nat_gateway" "rosa_public" {
  count = local.create_networking ? local.public_subnet_count : 0

  subnet_id         = aws_subnet.rosa_public[count.index].id
  allocation_id     = aws_eip.rosa_nat_gateway[count.index].id
  connectivity_type = "public"

  tags = merge(var.tags,
    {
      "Name" = "${var.cluster_name}-natgw-${aws_subnet.rosa_public[count.index].availability_zone}"
    }
  )

  lifecycle {
    ignore_changes = [tags]
  }

  depends_on = [aws_internet_gateway.rosa]
}
